name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
homepage:            Danny Nguyen
license:             BSD3
license-file:        LICENSE
author:              Danny Nguyen
maintainer:          danny.nguyen.2702@gmail.com
copyright:           2022 Danny Nguyen
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt
                     

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , random
                      , split
  -- ghc-options:         -Wall
  --                      -Wcompat
  --                      -Widentities
  --                      -Wincomplete-record-updates
  --                      -Wincomplete-uni-patterns
  --                      -Wmissing-export-lists
  --                      -Wmissing-home-modules
  --                      -Wpartial-fields
  --                      -Wredundant-constraints
