name:                testingAddition
version:             0.1.0.0
homepage:            https://github.com/githubuser/testingAddition#readme
license:             BSD3
license-file:        LICENSE
author:              Danny Nguyen
maintainer:          example@example.com
copyright:           2022 Danny Nguyen
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

library
  exposed-modules:    Addition
  ghc-options:        -Wall -fwarn-tabs
  build-depends:      base >= 4.7 && <5
                    , hspec
                    , QuickCheck
  hs-source-dirs:     .
  default-language:   Haskell2010
  

-- executable testingAddition
--   hs-source-dirs:      src
--   main-is:             Main.hs
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5
--   ghc-options:         -Wall
--                        -Wcompat
--                        -Widentities
--                        -Wincomplete-record-updates
--                        -Wincomplete-uni-patterns
--                        -Wmissing-export-lists
--                        -Wmissing-home-modules
--                        -Wpartial-fields
--                        -Wredundant-constraints
