name:                testingMorseCode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/testingMorseCode#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

library
  exposed-modules:        Morse
  hs-source-dirs:         src
  ghc-options:            -Wall -fwarn-tabs
  build-depends:          base >=4.7 && <5
                        , containers
                        , QuickCheck
  default-language:       Haskell2010

executable morse
  main-is:                Main.hs
  hs-source-dirs:         src
  ghc-options:            -Wall -fwarn-tabs
  build-depends:          base >=4.7 && <5
                        , testingMorseCode
                        , QuickCheck
                        , containers
  default-language:       Haskell2010

test-suite tests
  type:                   exitcode-stdio-1.0
  main-is:                tests.hs
  hs-source-dirs:         tests
  ghc-options:            -Wall -fno-warn-orphans
  build-depends:          base 
                        , testingMorseCode
                        , QuickCheck
                        , containers
  default-language:       Haskell2010

